--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,73 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+<html lang="en" id="home">
+    <head>
+        <meta charset="utf-8" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="theme-color" content="#000000" />
+        <meta
+            name="description"
+            content="Web site created using create-react-app"
+        />
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+        <!--fontawesome-->
+        <link
+            rel="stylesheet"
+            href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+            integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+            crossorigin="anonymous"
+        />
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+        <!-- JS jQUERY -->
+        <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+        <!--  -->
+        <title>Manggala Pustaka</title>
+    </head>
+    <body>
+        <div id="root"></div>
+    </body>
+
+    <script type="text/javascript">
+        $(function () {
+            var navbar = $(".header-inner");
+            $(window).scroll(function () {
+                if ($(window).scrollTop() <= 40) {
+                    navbar.removeClass("navbar-scroll");
+                } else {
+                    navbar.addClass("navbar-scroll");
+                }
+            });
+        });
+
+        var typed = new Typed(".auto-input", {
+            strings: ["Selamat datang di Perpustakaan"],
+            typeSpeed: 100,
+            backSpeed: 100,
+            loop: true,
+        });
+
+        $(".logo a").on("click", function (e) {
+            if (this.hash !== "") {
+                e.preventDefault();
+
+                const hash = this.hash;
+
+                $("html, body").animate(
+                    {
+                        scrollTop: $(hash).offset().top,
+                    },
+                    800
+                );
+            }
+        });
+
+        var myAlert = document.getElementById("myAlert");
+        myAlert.style.display = "none";
+
+        function alertFunction() {
+            myAlert.style.display = "block";
+        }
+    </script>
 </html>
