--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,10 @@
             integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
             crossorigin="anonymous"
         />
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
+        />
 
         <!-- JS jQUERY -->
         <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
@@ -69,5 +73,20 @@
         function alertFunction() {
             myAlert.style.display = "block";
         }
+
+        let heroCarouselIndicators = select("#hero-carousel-indicators");
+        let heroCarouselItems = select("#heroCarousel .carousel-item", true);
+
+        heroCarouselItems.forEach((item, index) => {
+            index === 0
+                ? (heroCarouselIndicators.innerHTML +=
+                      "<li data-bs-target='#heroCarousel' data-bs-slide-to='" +
+                      index +
+                      "' class='active'></li>")
+                : (heroCarouselIndicators.innerHTML +=
+                      "<li data-bs-target='#heroCarousel' data-bs-slide-to='" +
+                      index +
+                      "'></li>");
+        });
     </script>
 </html>
