--- a/public/index.html
+++ b/public/index.html
@@ -67,6 +67,11 @@
         class="back-to-top d-flex align-items-center justify-contents-center"
         ><i class="bi bi-arrow-up-short"></i
     ></a> -->
+    <script src="../src/assets/js/glightbox/js/glightbox.min.js">
+            const portfolioLightbox = GLightbox({
+            selector: ".portfolio-lightbox",
+        });
+    </script>
 
     <script type="text/javascript">
         // let backtotop = select(".back-to-top");
